--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ Django==5.1.4
 django-environ==0.11.2
 djangorestframework==3.15.2
 django-filter==24.3django-currentuser==0.8.0
+django-cors-headers==4.6.0
