--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ djangorestframework-simplejwt==5.4
 django-allauth==65.4.1
 djangorestframework-camel-case==1.4.2
 drf-redesign==0.4.0
+drf-nested-routers==0.94.1
